--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -165,7 +165,7 @@ html[xmlns] .flexslider .slides {
 .flex-direction-nav .flex-disabled {
   opacity: 0!important;
   filter: alpha(opacity=0);
-  cursor: url(http://www.alga-studio.com/wp-content/uploads/2019/04/cursor2.svg) 8.5 10, default !important;
+  cursor: url(/images/A.svg) 8.5 10, default !important;
   z-index: -1;
 }
 .flex-pauseplay a {
@@ -178,7 +178,7 @@ html[xmlns] .flexslider .slides {
   opacity: 0.8;
   z-index: 10;
   overflow: hidden;
-  cursor: url(http://www.alga-studio.com/wp-content/uploads/2019/04/cursor2.svg) 8.5 10, default !important;
+  cursor: url(/images/A.svg) 8.5 10, default !important;
   color: #000;
 }
 .flex-pauseplay a:before {
