--- a/css/style.css
+++ b/css/style.css
@@ -2307,6 +2307,7 @@ button.alga{
         .main-nav {
             list-style-type: none;
             display: none;
+           
         }
 
         .nav-links,
@@ -2320,24 +2321,26 @@ button.alga{
         .main-nav li {
             text-align: center;
             margin: 15px auto;
+            
         }
 
         .logo {
             display: inline-block;
-            font-size: 22px;
-            margin-top: 10px;
-            margin-left: 20px;
+            font-size: 20px;
+            margin-top: 20px;
+            margin-left: 30px;
             color:rgb(131, 66, 36);
             font-weight: 900;
         }
 
         .navbar-toggle {
             position: absolute;
-            top: 10px;
-            right: 20px;
+            top: 20px;
+            right: 30px;
             cursor: pointer;
-            background-color: rgba(255, 101, 29, 0.8) !important;
-            font-size: 24px;
+            background-color: rgba(78, 44, 29, 0.8) !important;
+            padding:15px;
+           
         }
 
         .active {
